added site map8

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <link rel="shortcut icon" href="img/favicon.ico" />
+    <link rel="canonical" href="https://web-presence.biz/" />
+
     <meta name="keywords"
         content="Custom software development Scottsdale, Small business software solutions, Scottsdale software development, Arizona custom software, Web-Presence LLC software services,Business software applications, Small business automation software, Industry-specific software solutions, Custom software for enterprises, Scottsdale software developers, Arizona business software, Software solutions in Scottsdale, Software development services Arizona, Tailored software solutions, Customized business software,Web application development, E-commerce software development, Affordable custom software, Scalable business software, Experienced software development team, Streamlining business processes, Automation for small businesses, Efficiency through custom software, Business software for productivity" />
     <meta name="description"
