--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         id="navWrap">
         <h5 class="my-0 mr-md-auto font-weight-normal">
             <a href="#" class="navbar-brand" data-portfolio="landingPg">
-                <img data-tada="landingPg" src="img/MA_Logo.png" class="img-fluid animated"
+                <img data-tada="landingPg" alt="web-presence logo" src="img/MA_Logo.png" class="img-fluid animated"
                     onmouseover="tadaRollover('landingPg')" onmouseout="tadaRollout('landingPg')" data-tada="landingPg"
                     onClick="javascript:showModule('landingPg')" />
             </a>
@@ -251,7 +251,7 @@
             <div class="col-md-auto text-center landingPgCol animated fadeIn">
                 <ul>
                     <li>
-                        <div><img src="img/MA_Logo.png" class="img-fluid"></div>
+                        <div><img src="img/MA_Logo.png" alt="web-presence logo" class="img-fluid"></div>
                     </li>
                     <li>
                         <h2>Aaron Smith: Web Developer</h2>
