mobile theme display update2

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
 
-    <div class="form-group" id="designOptions">
+    <div class="form-group animated" id="designOptions">
         <div id="designPanel-1">
             <ul>
                 <li><label class="radioContainer"><input type="radio" name="theme" value="option-1"
