--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords"
         content="Custom software development Scottsdale, Small business software solutions, Scottsdale software development, Arizona custom software, Web-Presence LLC software services,Business software applications, Small business automation software, Industry-specific software solutions, Custom software for enterprises, Scottsdale software developers, Arizona business software, Software solutions in Scottsdale, Software development services Arizona, Tailored software solutions, Customized business software,Web application development, E-commerce software development, Affordable custom software, Scalable business software, Experienced software development team, Streamlining business processes, Automation for small businesses, Efficiency through custom software, Business software for productivity" />
     <meta name="description"
-        content="Aaron Smith is a website design and developer possessing a vast array of skills including: high-end web development, graphic design, creative design multimedia, corporate branding, marketing and graphic design." />
+        content="wb design, software development, high-end web development, graphic design, creative design multimedia, corporate branding, marketing and graphic design." />
     <meta name="revisit" content="14 days" />
     <meta name="google-site-verification" content="NCFVUGslLcwrLO673AHZFCt6dKOtuom0J621X_O6Qto" />
 
@@ -217,7 +217,7 @@
 
         <div class="row  animated hide" data-module="contact">
             <div class="col-md-12 animated fadeIn ">
-                <h2>Contact Aaron Smith: Web Developer <br /> Web-Presence LLC </h2>
+                <h2>Contact Aaron: Web Developer <br /> Web-Presence LLC </h2>
                 <form method="POST" id="portfolioContact" action="" onSubmit="javascript:runningProcess()">
                     <div class="form-group block">
                         <ul>
