--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
         </div>
 
-        <div class="row">
+        <div class="row hide" data-module="resume">
 
             <div class="card imgFrameDetails col-md-12 ">
                 <h2 id="resumeTarget" class="text-capitalize">Experience</h2>
