re-targeted my resume text no more modal4

--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
         <div class="row hide" data-module="resume">
 
             <div class="card imgFrameDetails col-md-12 ">
-                <h2 class="text-capitalize">Experience</h2>
-                <hr id="resumeTarget" />
+                <h2 id="resumeTarget" class="text-capitalize">Experience</h2>
+                <hr />
                 <div data-resume="experience" class="card-body"></div>
                 <div data-resume="skills" class="hide card-body"></div>
                 <div data-resume="education" class="hide card-body"></div>
