--- a/index.html
+++ b/index.html
@@ -161,6 +161,60 @@
 
 
 
+
+
+        <div class="row  animated hide" data-module="contact">
+            <div class="col-md-12 animated fadeIn ">
+                <h2>Contact Aaron: Web Developer <br /> Web-Presence LLC </h2>
+                <form method="POST" id="portfolioContact" action="" onSubmit="javascript:runningProcess()">
+                    <div class="form-group block">
+                        <ul>
+                            <li> <input type="hidden" name="url" />
+                                <input type="text" name="legit" class="hide" onChange="javascript:onHandleChange()" />
+                                <input type="text" class="form-control" name="name" placeholder="Name" maxlength="50"
+                                    onChange="javascript:onHandleChange()" />
+                            </li>
+                            <li>
+                                <input type="email" class="form-control" name="email" maxlength="50" placeholder="Email"
+                                    onChange="javascript:onHandleChange()" />
+                            </li>
+                            <li>
+                                <input type="text" class="form-control" name="phone" maxlength="19" placeholder="Phone"
+                                    onChange="javascript:onHandleChange()" />
+                            </li>
+                            <li>
+                                <textarea class="form-control" row="10" name="message" maxlength="1000"
+                                    placeholder="Message" onChange="javascript:onHandleChange()"></textarea>
+                            </li>
+                            <button type="submit" disabled="" class="btn btn-primary form-control"
+                                disabled="true">Submit</button>
+                        </ul>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+
+        <div class="row justify-content-md-center animated" data-module="landingPg"
+            alt="Custom software development Scottsdale">
+            <div class="col-md-auto text-center landingPgCol animated fadeIn">
+                <ul>
+                    <li>
+                        <div><img src="img/MA_Logo.png" alt="web-presence logo" class="img-fluid"></div>
+                    </li>
+                    <li>
+                        <h2>Aaron Smith: Web Developer</h2>
+                    </li>
+                    <li>
+                        <div class="btn-group" role="group" aria-label="Default button group" id="landingPgLinksTarget">
+                        </div>
+                    </li>
+                    <li id="landingPgIcons">
+
+                    </li>
+                </ul>
+            </div>
+        </div>
         <div class="card-deck mb-3  animated hide" data-module="resume">
             <div class="card" data-info="career">
                 <div class="card-header">
@@ -219,67 +273,14 @@
 
         </div>
 
-        <div class="row hide" data-module="resume">
+        <div class="row hide" data-module="resume" id="resumeTarget">
 
-            <div class="card imgFrameDetails col-md-12 ">
-                <h2 id="resumeTarget" class="text-capitalize">Experience</h2>
+            <div class="card imgFrameDetails col-md-12">
+                <h2 id="resumeSelcted" class="text-capitalize">Experience</h2>
                 <hr />
                 <div data-resume="experience" class="card-body"></div>
                 <div data-resume="skills" class="hide card-body"></div>
                 <div data-resume="education" class="hide card-body"></div>
-            </div>
-        </div>
-
-        <div class="row  animated hide" data-module="contact">
-            <div class="col-md-12 animated fadeIn ">
-                <h2>Contact Aaron: Web Developer <br /> Web-Presence LLC </h2>
-                <form method="POST" id="portfolioContact" action="" onSubmit="javascript:runningProcess()">
-                    <div class="form-group block">
-                        <ul>
-                            <li> <input type="hidden" name="url" />
-                                <input type="text" name="legit" class="hide" onChange="javascript:onHandleChange()" />
-                                <input type="text" class="form-control" name="name" placeholder="Name" maxlength="50"
-                                    onChange="javascript:onHandleChange()" />
-                            </li>
-                            <li>
-                                <input type="email" class="form-control" name="email" maxlength="50" placeholder="Email"
-                                    onChange="javascript:onHandleChange()" />
-                            </li>
-                            <li>
-                                <input type="text" class="form-control" name="phone" maxlength="19" placeholder="Phone"
-                                    onChange="javascript:onHandleChange()" />
-                            </li>
-                            <li>
-                                <textarea class="form-control" row="10" name="message" maxlength="1000"
-                                    placeholder="Message" onChange="javascript:onHandleChange()"></textarea>
-                            </li>
-                            <button type="submit" disabled="" class="btn btn-primary form-control"
-                                disabled="true">Submit</button>
-                        </ul>
-                    </div>
-                </form>
-            </div>
-        </div>
-
-
-        <div class="row justify-content-md-center animated" data-module="landingPg"
-            alt="Custom software development Scottsdale">
-            <div class="col-md-auto text-center landingPgCol animated fadeIn">
-                <ul>
-                    <li>
-                        <div><img src="img/MA_Logo.png" alt="web-presence logo" class="img-fluid"></div>
-                    </li>
-                    <li>
-                        <h2>Aaron Smith: Web Developer</h2>
-                    </li>
-                    <li>
-                        <div class="btn-group" role="group" aria-label="Default button group" id="landingPgLinksTarget">
-                        </div>
-                    </li>
-                    <li id="landingPgIcons">
-
-                    </li>
-                </ul>
             </div>
         </div>
     </div>
