--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="animated fadeIn hide mb-5" data-module="blog">Blog</div>
 
     <div class="container mediaStage">
-        <div class="row animated fadeIn hide" data-module="applications">
+        <div class="row animated fadeIn" data-module="applications">
             <div class="col-md-9 no-gutters animated">
                 <div class="row">
                     <div class="col-md-12 d-flex justify-content-center">
@@ -195,7 +195,7 @@
         </div>
 
 
-        <div class="row justify-content-md-center animated" data-module="landingPg"
+        <div class="row justify-content-md-center animated hide" data-module="landingPg"
             alt="Custom software development Scottsdale">
             <div class="col-md-auto text-center landingPgCol animated fadeIn">
                 <ul>
